--- a/style.css
+++ b/style.css
@@ -41,24 +41,45 @@ p{
     line-height: 1.3;
 }
 .menu{
-list-style: none;
-position: absolute;
-top: 10px;
-right: 30px;
+background-color:ghostwhite;
+position:fixed;
+top: 0px;
+width: 100%;
 cursor:pointer ;
+margin-top: 0px;
 z-index: 10;
 
 }
 .links
 {
-float: left;
-padding-top: 5px;
-padding-bottom:5px;
-padding-left: 9px;
-padding-right: 9px;
+display: inline;
+padding-left: 30px;
+padding-right: 30px;
 font-size: 20px;
 }
+.links:hover{
+    font-size: 25px;
+    text-decoration: underline;
+
+}
+#Articles a
+{
+text-decoration: underline;
+color : rgb(0, 255, 0) !important; 
+}
+   
+
 #Name
 {
     font-family: 'Quicksand';
+}
+#Contacts{
+    background: coral;
+}
+#Contacts iframe
+{
+    width: 90%;
+}
+.contact1 h3{
+    display: inline;
 }
