--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
 body{
     text-align: center;
     margin: 0%;
-    padding-top: 800px;
-   
+
 }
-.profile{
-    border-radius: 50%;
-    margin-top: 100px;
-    margin-bottom: 50px;
-}
+
 #welcome{
+    z-index:9;
     bottom:0;
-    position: absolute;
     width: 100%;
     height: 100%;
     display:table ;
@@ -21,10 +16,12 @@ body{
 h1{
     font-size:40px;
     font-weight: 300;
+    
 }
 #bio{
     font-family:trebuchet;
-    padding:50px;
+padding: 50px;
+    text-align: center;
 
 }
 .line{
@@ -35,21 +32,12 @@ h1{
   
 }
 p{
-    max-width: 500px;
+  
     margin: 25px auto;
     font-size: 18px;
     line-height: 1.3;
 }
-.menu{
-background-color:ghostwhite;
-position:fixed;
-top: 0px;
-width: 100%;
-cursor:pointer ;
-margin-top: 0px;
-z-index: 10;
 
-}
 .links
 {
 display: inline;
@@ -83,3 +71,6 @@ color : rgb(0, 255, 0) !important;
 .contact1 h3{
     display: inline;
 }
+.my_nav_bar 
+{ position:sticky;
+     top:0; z-index:99999 }
